WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159532
API Test DoNotLeakWebView.ViewThatLoadsEditableArea times out on macOS Sierra
https://bugs.webkit.org/show_bug.cgi?id=159532
Summary
API Test DoNotLeakWebView.ViewThatLoadsEditableArea times out on macOS Sierra
Beth Dakin
Reported
2016-07-07 15:57:38 PDT
API Test DoNotLeakWebView.ViewThatLoadsEditableArea times out on macOS Sierra
rdar://problem/27177179
Attachments
Patch
(3.11 KB, patch)
2016-07-07 16:00 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-07-07 16:00:21 PDT
Created
attachment 283075
[details]
Patch
Beth Dakin
Comment 2
2016-07-07 22:13:39 PDT
Thanks Tim!
https://trac.webkit.org/changeset/202957
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug