API Test DoNotLeakWebView.ViewThatLoadsEditableArea times out on macOS Sierra https://bugs.webkit.org/show_bug.cgi?id=159532 -and corresponding- rdar://problem/27177179

Reviewed by Tim Horton.

Source/WebKit/mac:

* WebView/WebView.mm:
(-[WebView showCandidates:forString:inRect:forSelectedRange:view:completionHandler:]):
(-[WebView forceRequestCandidatesForTesting]):
(-[WebView shouldRequestCandidates]):
* WebView/WebViewPrivate.h:

Tools:

* TestWebKitAPI/Tests/mac/ViewWithEditableAreaLeak.mm:
(-[DoNotLeakFrameLoadDelegate webView:didFinishLoadForFrame:]):



Canonical link: https://commits.webkit.org/177681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202957 268f45cc-cd09-0410-ab3c-d52691b4dbfc